Updated module 4 with Garbage collections and String deduplication.